--- a/QuiSom.css
+++ b/QuiSom.css
@@ -29,50 +29,88 @@ p{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-img{
+/* Style the Image Used to Trigger the Modal */
+#myImg {
     width: 100%;
     max-width: 200px;
     height: auto;
     position: relative; top:50%; left:40%;
     display: inline-block;
-}
-
-img:hover{
-    width: 100%;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  
+  #myImg:hover {opacity: 0.7;}
+  
+  /* The Modal (background) */
+  .modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+  }
+  
+  /* Modal Content (Image) */
+  .modal-content {
+    margin: auto;
+    display: block;
+    width: 30%;
     max-width: 400px;
-    height: auto;
-    position: relative; 
-    display: inline-block;
-    position: relative; left:30%;
-}
-.fbtn{
-    float: left;
-    font-family: 'Oswald', sans-serif;
-    padding: 10%;
+  }
+  
+  /* Caption of Modal Image (Image Text) - Same Width as the Image */
+  #caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
     text-align: center;
-}
-
-a{
-    font-family: "Raleway", sans-serif;
-    font-weight: 500;
-    font-size: 20px;
-    letter-spacing: 1px;
-    display: inline-block;
-    padding: 20px;
-    border-radius: 8px;
-    transition: 0.5s;
-    margin-top: 30px;
-    color: #fff;
-    background: #e03a3c;
-    border: 2px solid #e03a3c;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
+  }
+  
+  /* Add Animation - Zoom in the Modal */
+  .modal-content, #caption {
+    animation-name: zoom;
+    animation-duration: 0.6s;
+  }
+  
+  @keyframes zoom {
+    from {transform:scale(0)}
+    to {transform:scale(1)}
+  }
+  
+  /* The Close Button */
+  .close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #bbb;
     text-decoration: none;
-}
-
-a:hover{
-    background: transparent;
-    border-color: black;
-    color: black;
-    text-align: none;
-
-}
+    cursor: pointer;
+  }
+  
+  /* 100% Image Width on Smaller Screens */
+  @media only screen and (max-width: 700px){
+    .modal-content {
+      width: 100%;
+    }
+  }
 
