video +  qs update

--- a/Form.css
+++ b/Form.css
@@ -69,6 +69,14 @@ h5{
     position: relative; left: 27%;
     line-height: .5px;
 }
+
+#myVideo {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%; 
+    min-height: 100%;
+  }
   
     
 
