--- a/QuiSom.css
+++ b/QuiSom.css
@@ -1,13 +1,13 @@
 body{
     margin: 0%;
     padding: 0%;
-    background-color: rgb(214, 195, 200);
+    background-color: rgb(217, 204, 207);
 }
 
 h1{
-    font-family: 'Playfair Display', serif;
+    font-family:'Courier New', Courier, monospace;
     width: 100%;
-    height: 70px;
+    height: 80px;
     display: flex;
     align-items: center;
     font-size: 50px;
@@ -19,7 +19,7 @@ h1{
 }
 
 p{
-    font-family: 'Merriweather', serif;
+  font-family: 'Montserrat', sans-serif;
     position: center;
 }
 
@@ -113,4 +113,5 @@ p{
       width: 100%;
     }
   }
+
 
