--- a/QuiSom.css
+++ b/QuiSom.css
@@ -7,7 +7,7 @@ body{
   background-color: white;
 }
 h1{
-    font-family:'Courier New', Courier, monospace;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     width: 100%;
     height: 80px;
     display: flex;
@@ -23,6 +23,7 @@ h1{
 p{
   font-family: 'Montserrat', sans-serif;
     text-align: center;
+    color: white;
 }
 
 .pt{
@@ -35,7 +36,7 @@ p{
     width: 100%;
     max-width: 200px;
     height: auto;
-    position: relative; top:50%; left:40%;
+    position: relative; top:50%; left:45%;
     display: inline-block;
     border-radius: 5px;
     cursor: pointer;
@@ -113,6 +114,15 @@ p{
     .modal-content {
       width: 100%;
     }
+  }
+
+  #myVideo {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%; 
+    min-height: 100%;
+    z-index: -1;
   }
 
 
