--- a/index.css
+++ b/index.css
@@ -2,10 +2,21 @@
     body{
         margin: 0%;
         padding: 0%;
-        background-image: url("Assets/dark\ hero.png");
+        background-color: black;
+        width: 100%;
+        height:100%;
+    }
+
+    .gcontainer{
+        background-image: url("Assets/hero-bg.jpg");
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
+        width: 100%;
+        height:100%;
+        position: fixed;
+        z-index: -1;
+        opacity: .3;
     }
     
 
@@ -51,6 +62,55 @@
     a {
         word-wrap: break-word;
     }
+
+    .heroimg{
+        height: auto;
+        width: 100%;
+    }
+
+    .wrap {
+        display: flex;
+        width: 60%;
+        margin-left: auto;
+        margin-right: auto;
+        height: auto;
+        min-height: 250px;
+        margin-top: 10%;
+      } 
+      .wrap>* {
+        flex: 1;
+      }
+      
+      .imagebox {
+        position: relative;
+      }
+      
+      img.n {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+      
+      .textbox {
+        padding: 1rem;
+        background-color: transparent;
+        color: #fff;
+      }
+
+      .btm{
+        width: 100%;
+        height: 30%;
+      }
+
+      p{
+          font-size: large;
+          font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      }
+
+      h2{
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+      }
 
 
      
