--- a/index.css
+++ b/index.css
@@ -61,6 +61,7 @@
 
     a {
         word-wrap: break-word;
+        text-decoration: none;
     }
 
     .heroimg{
@@ -89,6 +90,7 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+        border-radius: 5px;
       }
       
       .textbox {
@@ -110,6 +112,21 @@
       h2{
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
+      }
+
+      footer{
+        text-align: center;
+        background-color: rgb(193, 33, 33);
+        color: white;
+        padding-top: 30px;
+        padding-bottom: 30px;
+      }
+
+      .f1{
+        text-decoration: none;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        color: white;
+        font-size: large;
       }
 
 
