--- a/QuiSom.css
+++ b/QuiSom.css
@@ -24,6 +24,7 @@ p{
   font-family: 'Montserrat', sans-serif;
     text-align: center;
     color: white;
+    background-color: rgba(204, 204, 204, 0.471);
 }
 
 .pt{
