--- a/index.css
+++ b/index.css
@@ -56,7 +56,7 @@
     
     .btn a:hover{
         color: rgb(131, 54, 54);
-        background-color: white;
+        background-color: #e1e2d9;
     }
 
     a {
@@ -144,6 +144,10 @@
         width: 100%;
         padding: 0 15px;
      }
+
+
+
+     
 
       
       
