--- a/QuiSom.css
+++ b/QuiSom.css
@@ -5,6 +5,10 @@
 
 body{
   background-color: white;
+  background-image: url("Assets/hero-bg.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
 }
 h1{
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -24,7 +28,7 @@ p{
   font-family: 'Montserrat', sans-serif;
     text-align: center;
     color: white;
-    background-color: rgba(204, 204, 204, 0.471);
+    background-color: rgba(0, 0, 0, 0.584);
 }
 
 .pt{
