--- a/index.css
+++ b/index.css
@@ -145,6 +145,18 @@
         padding: 0 15px;
      }
 
+     .btnc{
+      background-color: rgb(221, 57, 57);
+      color: white;
+      padding: 8px 16px;
+      text-decoration: none;
+      cursor: pointer;
+      border-radius: 4px;
+      border: 2px solid rgb(221, 57, 57);
+      border-color: rgb(221, 57, 57);
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+     }
+
 
 
      
