--- a/index.css
+++ b/index.css
@@ -116,7 +116,7 @@
 
       footer{
         text-align: center;
-        background-color: rgb(193, 33, 33);
+        background-color: rgba(8, 8, 8, 0.89);
         color: white;
         padding-top: 30px;
         padding-bottom: 30px;
