--- a/QuiSom.css
+++ b/QuiSom.css
@@ -1,34 +1,71 @@
-*{
-    margin: 0%;
-    padding: 0%;
+body{
+  margin: 0;
+  padding: 0;
+  background-color: black;
+  width: 100%;
+  height:100%;
 }
 
-body{
-  background-color: white;
+.gcontainer{
   background-image: url("Assets/hero-bg.jpg");
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height:100%;
+  position: fixed;
+  z-index: -1;
+  opacity: .3;
 }
+
+/*Ajust header*/
+
 h1{
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    width: 100%;
-    height: 80px;
-    display: flex;
-    align-items: center;
-    font-size: 50px;
-    padding: auto;
-    background-color: #953f4e;
-    color: rgb(255, 255, 255);
-    margin: 0;
-    justify-content: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  width: 100%;
+  height: 90px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 50px;
+  background-color: #e1e2d9;
+  color: white;
+  margin: 0;
+  padding: 0;
+  
+  
+}
+
+h2{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  background-color: #e1e2d9;
+  color: rgb(221, 67, 67);
+  margin: 0;
+  padding: 0;
+  line-height: 0%;
+}
+
+h3{
+  color: #e1e2d9;
+  margin: 0;
+  padding: 0;
+}
+
+.bk{
+  background-color: #e1e2d9;
+  margin: 0;
+  padding: 0;
 }
 
 p{
   font-family: 'Montserrat', sans-serif;
     text-align: center;
     color: white;
-    background-color: rgba(0, 0, 0, 0.584);
+    
 }
 
 .pt{
@@ -129,5 +166,36 @@ p{
     min-height: 100%;
     z-index: -1;
   }
+
+  footer{
+    text-align: center;
+    background-color: rgba(8, 8, 8, 0.89);
+    color: white;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .f1{
+    text-decoration: none;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: white;
+    font-size: large;
+  }
+
+  .footer-col{
+    width: 100%;
+    padding: 0 15px;
+ }
+
+ .container{
+  max-width: 1170px;
+  margin:auto;
+}
+.row{
+  display: flex;
+  flex-wrap: wrap;
+}
 
 
