--- a/info.css
+++ b/info.css
@@ -1,3 +1,23 @@
+body{
+    margin: 0;
+    padding: 0;
+    background-color: rgb(0, 0, 0);
+    width: 100%;
+    height:100%;
+}
+
+.gcontainer{
+    background-image: url(Assets/hero-bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    width: 100%;
+    height:100%;
+    position: fixed;
+    z-index: -1;
+    opacity: .3;
+}
+
 h1{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     width: 100%;
