--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body{
     background-color: rgb(0, 0, 0);
     width: 100%;
     height:100%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .gcontainer{
@@ -36,7 +37,7 @@ h1{
     
 }
 
-h2{
+.h2p{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     display: flex;
     justify-content: center;
@@ -49,7 +50,7 @@ h2{
     line-height: 0%;
 }
 
-h3{
+.h3p{
     color: #e1e2d9;
     margin: 0;
     padding: 0;
@@ -76,14 +77,15 @@ h3{
   
   .imagebox {
     position: relative;
-  }
-  
+    
+  } 
   img.n {
     width: 50%;
     height: 100%;
     object-fit: cover;
     border-radius: 5px;
   }
+
   
   .textbox {
     padding: 1rem;
@@ -105,6 +107,8 @@ h3{
   float: left;
   width: 25%;
   padding: 10px;
+  text-align:center;
+  color: white;
 }
 
 /* Style the images inside the grid */
@@ -118,21 +122,10 @@ h3{
 }
 
 /* Clear floats after the columns */
-.row:after {
+.row2:after {
   content: "";
   display: table;
   clear: both;
-}
-
-.item{
-  width:200px;
-  text-align:center;
-  display:block;
-  background-color: transparent;
-  border: 1px solid transparent;
-  margin-right: 10px;
-  margin-bottom: 1px;
-  float:left;
 }
 
 footer{
@@ -143,7 +136,7 @@ footer{
     padding-bottom: 30px;
     display: flex;
     flex-wrap: wrap;
-    margin-top: 6%;
+    margin-top: 20%;
   }
 
   .f1{
@@ -167,9 +160,6 @@ footer{
     padding: 0 15px;
  }
 
- .tt{
-
- }
 
 
 
