--- a/style.css
+++ b/style.css
@@ -104,9 +104,9 @@ h1{
 
   /* The grid: Four equal columns that floats next to each other */
 .column {
-  float: left;
+  float: right;
   width: 25%;
-  padding: 10px;
+  padding: 50px;
   text-align:center;
   color: white;
 }
