--- a/info.css
+++ b/info.css
@@ -58,3 +58,11 @@ h3{
     margin: 0;
     padding: 0;
 }
+
+p{
+    font-family: 'Montserrat', sans-serif;
+      text-align: center;
+      color: white;
+      font-size: 200%;
+        padding: 15%;
+  }
