--- a/info.css
+++ b/info.css
@@ -66,3 +66,16 @@ p{
       font-size: 200%;
         padding: 15%;
   }
+
+  .btnc{
+    background-color: rgb(221, 57, 57);
+    color: white;
+    padding: 8px 16px;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 4px;
+    border: 2px solid rgb(221, 57, 57);
+    border-color: rgb(221, 57, 57);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-left: 41%;
+   }
